# vvtalkbox

./: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue
src-felty/: Cargo.toml  build.rs  felty.toml
src-felty/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HistoryArea.vue  InputArea.vue  SettingsDrawer.vue
src/composables/: useVoicevox.ts
src/types/: voicevox.ts
